--- a/src/assets/Components/Home.module.css
+++ b/src/assets/Components/Home.module.css
@@ -1,18 +1,87 @@
-.home{
-    box-sizing: border-box;
+.home {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 50px 135px;
+  padding-top: 70px;
+  width: 100%;
+  background: linear-gradient(180deg, #161616, #2c2c2c);
 }
-.container1{
-    height: 600px;
-    background-color: rgb(249, 255, 161);
+.line{
+  height: 30px;
+  background-color: rgb(27, 27, 27);
 }
-.container1 .images{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+.left {
+  width: 550px;
 }
-.container1 .image{
-    background-color: white;
-    height: 400px;
-    width: 300px;
+
+.left h1 {
+  color: white;
+  font-size: 35px;
+}
+.left p {
+  text-align: justify;
+  color: #868686;
+}
+.resume_button {
+  padding: 5px 20px;
+  font-size: 18px;
+  font-weight: 800;
+  border: none;
+  background-color: #cccccc;
+  color: #181818;
+  border-radius: 25px;
+}
+.resume_button:hover {
+  background-color: #ffffff;
+}
+.right .circle {
+  height: 250px;
+  width: 250px;
+  background: linear-gradient(180deg, #ffffff, #9c9c9c);
+  border-radius: 50%;
+  align-items: flex-end;
+}
+.circle .photo {
+  position: absolute;
+  width: 250px;
+  top: 107px;
+}
+
+.projects {
+  background: linear-gradient(180deg, #ffffff, #bababa);
+}
+
+.projectstag {
+  padding-top: 20px;
+  margin-bottom: -5px;
+  justify-self: center;
+  font-size: 25px;
+  font-weight: 800;
+  color: linear-gradient(90deg, #161616, #2c2c2c);
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 35px;
+  flex-wrap: wrap;
+  padding: 20px 0;
+  padding-bottom: 50px;
+}
+.card {
+  height: 200px;
+  width: 320px;
+  background-color: #161616;
+  border-radius: 10px;
+}
+.skills{
+  padding: 20px 0px;
+  height: 500px;
+}
+.skills p{
+  justify-self: center;
+  font-size: 25px;
+  font-weight: 800;
+  color: linear-gradient(90deg, #161616, #2c2c2c);
 }
