--- a/src/assets/Components/Navbar.module.css
+++ b/src/assets/Components/Navbar.module.css
@@ -1,33 +1,59 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .navbar{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 80px;
-    box-shadow: 0px 1px 2px #8f8f8f
+    padding: 20px 0px;
+    background-color: #2c2c2c;
 }
 
 .navbar .logo{
     font-size: 25px;
     font-weight: 800;
-    color: #ff4c16;
+    background: linear-gradient(90deg, #ffffff, #cccccc);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     cursor: pointer;
 }
 .navbar ul{
+    justify-content: center;
     display: flex;
     align-items: center;
     gap: 25px;
+    margin: 0;
 }
 
 .navbar ul li{
+    align-items: center;
+    font-size: 19px;
     list-style: none;
+    font-weight: 400;
     cursor: pointer;
+    color: #cccccc;
+
+}
+.navbar ul li .nav_pages {
+  text-decoration: none;
+  color: #cccccc;
+}
+
+.navbar ul li .nav_pages:hover{
+    color: rgb(255, 255, 255);
 }
 
 .navbar ul button{
-    padding: 5px 10px;
+    padding: 5px 20px;
     font-size: 18px;
     font-weight: 500;
     border: none;
-    background-color: #ff4c16;
-    color: white;
+    background-color: #cccccc;
+    color: #181818;
+    border-radius: 25px;
+}
+
+.navbar ul button:hover{
+    background-color: #ffffff;
 }
