--- a/src/assets/Components/Footer.module.css
+++ b/src/assets/Components/Footer.module.css
@@ -3,13 +3,34 @@
   justify-content: space-around;
   width: 100%;
   background: linear-gradient(180deg, #161616, #2c2c2c);
-  padding: 50px 0px;
+  padding: 50px 200px;
 }
 .left {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
   padding: 20px;
-  height: 100px;
-  width: 100px;
-  background-color: azure;
+}
+.left .upper h1 {
+  font-size: 30px;
+  color: rgb(90, 90, 90);
+}
+.upper h2 {
+  font-size: 60px;
+  font-weight: 800;
+  color: white;
+}
+.left .lower {
+  display: flex;
+  gap: 20px;
+}
+.lower h1 {
+  font-size: 20px;
+  align-self: center;
+  color: white;
+}
+.lower img{
+  cursor: pointer;
 }
 .right {
   display: flex;
@@ -83,13 +104,13 @@
   vertical-align: top;
   font-family: inherit;
 }
-.send{
+.send {
   padding: 5px 15px;
   outline: none;
   border: none;
   color: #161616;
   background-color: #cccccc;
 }
-.send:hover{
+.send:hover {
   background-color: white;
 }
