--- a/src/assets/Components/Home.module.css
+++ b/src/assets/Components/Home.module.css
@@ -449,35 +449,34 @@
   }
   .journey .rightjourney {
     width: 90%;
-    height: 180px;
+    height: 170px;
     padding: 15px;
   }
   .journey .jour .heading {
-    font-size: 11px;
+    font-size: 11.5px;
   }
   .jourDescription {
-    font-size: 14px;
-    color: #313131;
-    margin-top: 5px;
-    transition: all 0.3s ease;
+    font-size: 9px;
   }
 
   /* Certificates */
   .certificatecontainer {
-    padding: 20px 10px 40px 10px;
+    padding: 20px 10px;
   }
   .certificatecontainer .content {
     width: 100%;
-    flex-direction: column;
     gap: 25px;
     align-items: center;
   }
   .certificate {
-    width: 90%;
-    padding: 15px 10px;
+    width: 160px;
+    padding: 5px 10px;
   }
   .certificate .top h1 {
-    font-size: 18px;
+    font-size: 15px;
+  }
+    .certificate:hover {
+    transform: none !important;
   }
 
   /* Modal */
