Updated certificate section to open image on click

--- a/src/assets/Components/Footer.module.css
+++ b/src/assets/Components/Footer.module.css
@@ -148,14 +148,11 @@
     flex-direction: column;
   }
   .firstname,
-  .lastname {
+  .lastname, .email, .message {
     max-width: 100%;
     width: 100%;
   }
-  .email,
-  .message {
-    flex-basis: 100%;
-  }
+
   .firstname input,
   .lastname input,
   .email input,
