--- a/src/assets/Components/Navbar.module.css
+++ b/src/assets/Components/Navbar.module.css
@@ -1,91 +1,88 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 20px 0px;
-    background-color: #2c2c2c;
-}
-
-.navbar .logo{
-    font-size: 25px;
-    font-weight: 800;
-    background: linear-gradient(90deg, #ffffff, #cccccc);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    cursor: pointer;
-}
-.navbar a{
-    text-decoration: none;
-}
-.navbar ul{
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    gap: 25px;
-    margin: 0;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 20px 0px;
+  background-color: #2c2c2c;
 }
 
-.navbar ul li{
-    align-items: center;
-    font-size: 19px;
-    list-style: none;
-    font-weight: 400;
-    cursor: pointer;
-    color: #cccccc;
+.navbar .logo {
+  font-size: 25px;
+  font-weight: 800;
+  background: linear-gradient(90deg, #ffffff, #cccccc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+}
+.navbar a {
+  text-decoration: none;
+}
+.navbar ul {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  margin: 0;
+}
 
+.navbar ul li {
+  align-items: center;
+  font-size: 19px;
+  list-style: none;
+  font-weight: 400;
+  cursor: pointer;
+  color: #cccccc;
 }
 .navbar ul li .nav_pages {
   text-decoration: none;
   color: #cccccc;
 }
 
-.navbar ul li .nav_pages:hover{
-    color: rgb(255, 255, 255);
+.navbar ul li .nav_pages:hover {
+  color: rgb(255, 255, 255);
 }
 
-.navbar ul button{
-    padding: 5px 20px;
-    font-size: 18px;
-    font-weight: 500;
-    border: none;
-    background-color: #cccccc;
-    color: #181818;
-    border-radius: 25px;
+.navbar ul button {
+  padding: 5px 20px;
+  font-size: 18px;
+  font-weight: 500;
+  border: none;
+  background-color: #cccccc;
+  color: #181818;
+  border-radius: 25px;
 }
 
-.navbar ul button:hover{
-    background-color: #ffffff;
+.navbar ul button:hover {
+  background-color: #ffffff;
 }
-
 
 @media (max-width: 480px) {
   .navbar {
     flex-direction: column;
-    padding: 15px 10px;
-    gap: 15px;
+    justify-content: center;
+    padding-bottom: 15px;
   }
-
   .navbar .logo {
     font-size: 20px;
   }
-
   .navbar ul {
-    flex-direction: column;
-    gap: 15px;
+    justify-content: center;
+    display: flex;
+    gap: 20px;
   }
 
   .navbar ul li {
-    font-size: 16px;
+    align-items: center;
+    font-size: 15px;
   }
 
   .navbar ul button {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    border-radius: 20px;
+    margin-right: 15px;
+    padding: 5px 15px;
+    font-size: 15px;
   }
 }
