Your commit message

--- a/src/assets/Components/Portfolio.module.css
+++ b/src/assets/Components/Portfolio.module.css
@@ -21,7 +21,7 @@
 }
 
 .uibox {
-  width: 68%;
+  width: 1030px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -74,7 +74,7 @@
 }
 
 .graphicbox {
-  width: 68%;
+  width: 1030px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
